image size reduction for optimization

--- a/index.html
+++ b/index.html
@@ -57,23 +57,23 @@
                 <h2>ВИДЫ ЛАБОРАТОРИЙ</h2>
                 <div class="labs__gallery-content-images">
                     <div class="labs__gallery-content-card">
-                        <img src="./assets/images/Elektronika lab 2.jpg" alt="" loading="lazy">
+                        <img src="./assets/images/Elektronika lab 2.jpg" alt="">
                         <h3>Лаборатория электроники</h3>
                     </div>
                     <div class="labs__gallery-content-card">
-                        <img src="./assets/images/Mexatronika lab 1.JPG" alt="" loading="lazy">
+                        <img src="./assets/images/Mexatronika lab 1.JPG" alt="">
                         <h3>Лаборатория механотронники</h3>
                     </div>
                     <div class="labs__gallery-content-card">
-                        <img src="./assets/images/Muqobil energiya lab 1.jpg" alt="" loading="lazy">
+                        <img src="./assets/images/Muqobil energiya lab 1.jpg" alt="">
                         <h3>Лаборатория возобновляемой энергии</h3>
                     </div>
                     <div class="labs__gallery-content-card">
-                        <img src="./assets/images/Qurulish lab 1.JPG" alt="" loading="lazy">
+                        <img src="./assets/images/Qurulish lab 1.JPG" alt="">
                         <h3>Лаборатория строительства</h3>
                     </div>
                     <div class="labs__gallery-content-card">
-                        <img src="./assets/images/Robototexnika lab 1.jpg" alt="" loading="lazy">
+                        <img src="./assets/images/Robototexnika lab 1.jpg" alt="">
                         <h3>Лаборатория робототехники</h3>
                     </div>
                 </div>
