edit a tag to span in language dropdown

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div class="lang-switcher">
                 <ul class="lang-switcher__list">
                     <li class="lang-switcher__item">
-                        <a href="#" class="lang-switcher__toggle" id="currentLang">RU<img class="lang-switcher__arrow" src="./assets/icons/arrow.svg" alt=""></a>
+                        <span class="lang-switcher__toggle" id="currentLang">RU<img class="lang-switcher__arrow" src="./assets/icons/arrow.svg" alt=""></span>
                         <ul class="lang-switcher__dropdown" id="langDropdown">
-                            <li><a href="#" class="lang-switcher__option" data-lang="uz">UZ</a></li>
-                            <li><a href="#" class="lang-switcher__option" data-lang="en">EN</a></li>
+                            <li><span class="lang-switcher__option" data-lang="uz">UZ</span></li>
+                            <li><span class="lang-switcher__option" data-lang="en">EN</span></li>
                         </ul>
                     </li>
                 </ul>
