--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                     <div class="swiper-slide"><img src="./assets/images/Vertikal shamol trubinasi.jpg" alt="Innovation 2" loading="lazy"></div>
                     <div class="swiper-slide"><img src="./assets/images/dinamik lyustra.JPG" alt="Innovation 3" loading="lazy"></div>
                     <div class="swiper-slide"><img src="./assets/images/robot.jpg" alt="Innovation 4" loading="lazy"></div>
+                    <div class="swiper-slide"><img src="./assets/images/industry_4.jpg__1000.0x707.0_q85_subsampling-2.jpg" alt="Innovation 5" loading="lazy"></div>
                 </div>
             </div>
         </section>
@@ -129,6 +130,9 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./assets/images/lift.jpg" alt="Thumb 3">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./assets/images/industry_4.jpg__1000.0x707.0_q85_subsampling-2.jpg" alt="Thumb 4">
                     </div>
                 </div>
             </div>
@@ -153,6 +157,13 @@
                             <img src="./assets/images/lift.jpg" alt="Invention 3"> 
                             <h3 data-translate="liftStand">Стенд для обучения Лифта</h3>
                             <p data-translate="liftDescription">Этот стенд в основном предназначен для студентов, обучающихся в области лифтов, у которых будет возможность применить свои теоретические знания на практике с помощью этого образовательного стенда. Учебный стенд лифта выполнен в 2-х экземплярах, каждый из которых состоит из 5-ти этажей. Этот учебный стенд состоит из отдельных шаговых двигателей для перемещения кабины и двери, груза для поддержания баланса кабины, датчиков для управления движением и системы управления (ПЛК). Стенд предназначен для использования в помещении при температуре от +5С до +35С и относительной влажности от 30% до 70%. С помощью этого стенда студенты учатся работать с датчиками, управлять шаговыми двигателями и писать программы для системы управления, которая называется ПЛК. На лифтовом учебном стенде студенты закрепляют свои теоретические знания, применяя их с помощью преподавателя. Студенты будут иметь возможность использовать данный учебный стенд под присмотром лаборанта помимо занятий.</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="top__innovations-card">
+                            <img src="./assets/images/industry_4.jpg__1000.0x707.0_q85_subsampling-2.jpg" alt="Invention 3"> 
+                            <h3 data-translate="industryStand">Industry 4.0</h3>
+                            <p data-translate="industryDescription">Индустрия 4.0 меняет способы производства, улучшения и распространения своей продукции компаниями. Производители интегрируют новые технологии, в том числе Интернет вещей (IoT), облачные вычисления и аналитику, а также искусственный интеллект и машинное обучение, в свои производственные мощности и во все операции. Эти умные фабрики оснащены передовыми датчиками, встроенным программным обеспечением и робототехникой, которые собирают и анализируют данные и позволяют принимать более эффективные решения. Еще более высокая ценность создается, когда данные о производственных операциях объединяются с операционными данными из ERP, цепочки поставок, обслуживания клиентов и других корпоративных систем, чтобы создать совершенно новые уровни видимости и понимания ранее разрозненной информации. Эти цифровые технологии ведут к повышению уровня автоматизации, диагностического обслуживания, само оптимизации улучшений процессов и, прежде всего, к новому уровню эффективности и реагирования на потребности клиентов, который ранее был недостижим. Создание «умных» заводов предоставляет невероятную возможность для обрабатывающей промышленности вступить в четвертую промышленную революцию. Анализ больших объемов больших данных, собранных с датчиков в заводских цехах, обеспечивает видимость производственных активов в режиме реального времени и может предоставить инструменты для выполнения профилактического обслуживания, чтобы минимизировать время простоя оборудования. Концепции и технологии Индустрии 4.0 могут применяться во всех типах промышленных компаний, включая дискретное и непрерывное производство, а также в нефтегазовой, горнодобывающей и других отраслях промышленности.</p>
                         </div>
                     </div>
                 </div>
