add another section called "muhandis d"

--- a/index.html
+++ b/index.html
@@ -169,6 +169,19 @@
                 </div>
             </div>
         </section>
+
+        <section class="muhandis">
+            <div class="muhandis__content container">
+                <h2 data-translate="muhandisTitle">MUHANDIS D</h2>
+                <p data-translate="muhandisInfo">Направления, интегрированные с ИТ в развитие общества, часто описывают как актуальную специальность сегодняшнего дня, и в то же время в сфере производства молодые специалисты, способные работать на современном оборудовании, импортируемом из-за рубежа, всегда интересны крупным производителям. Стартап «Мухандис Д» в Инновационном центре является инкубационным адресом вышеупомянутого персонала. Основной целью данного стартапа является решение вышеуказанной задачи путем подготовки технических инженеров в соответствии с современными требованиями и обеспечением в институте. По шкале «Мухандис D» студент, интересующийся всеми техническими дисциплинами Технического института Ёджу и выбранный в тесте, будет последовательно изучать области CAD, робототехники, электроники, программирования, металлоконструкций и мехатроники и будет уметь работать над техническими разработками.</p>
+                <div class="muhandis__images">
+                    <img src="./assets/images/1u.jpg__1000.0x600.0_q85_subsampling-2.jpg" alt="">
+                    <img src="./assets/images/2u.jpg__1000.0x600.0_q85_subsampling-2.jpg" alt="">
+                    <img src="./assets/images/3u.jpg__1000.0x600.0_q85_subsampling-2.jpg" alt="">
+                    <img src="./assets/images/4u.jpg__1000.0x600.0_q85_subsampling-2.jpg" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer class="footer">
